--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -1,13 +1,12 @@
 .post {
-    width: 385px;
-    margin: 0px 25px 40px 25px;
-    display: flex;
-    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
   }
   
   .postImg {
-    width: 385px;
-    height: 280px;
+    width: 100%;
+    height: 50vh;
     object-fit: cover;
     border-radius: 7px;
   }
