--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -8,6 +8,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    @media screen and (max-width: 1100px){
+     flex-wrap: wrap;
+  
+    }
   }
   
   .sidebarItem {
