--- a/src/pages/write/write.css
+++ b/src/pages/write/write.css
@@ -1,11 +1,11 @@
 .write {
     padding-top: 50px;
+    overflow: hidden;
   }
   
   .writeImg {
-    margin-left: 150px;
-    width: 70vw;
-    height: 250px;
+    width: 100%;
+    height: 50vh;
     border-radius: 10px;
     object-fit: cover;
   }
@@ -15,7 +15,7 @@
   }
   
   .writeFormGroup {
-    margin-left: 150px;
+    width: 100%;
     display: flex;
     align-items: center;
   }
